--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ src/StructuredStreaming/__*
 utils/__*
 src/StructuredStreaming/metastore_db
 src/StructuredStreaming/*.log
+src/StructuredStreaming/spark-warehouse/*
 logs/*
