--- a/config/config.json
+++ b/config/config.json
@@ -18,7 +18,8 @@
     },
     "streaming":{
         "app_name" : "kafka-streaming",
-        "spark_sql_kafka" : "org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0",
+        "spark_sql_kafka" : "org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.3",
+        "delta_core" : "rg.apache.spark:io.delta:delta-core_2.12:2.1.0",
         "maxOffsetsPerTrigger" : 200,
         "startingTime" : 1,
         "writeData" :["delta-table"],
