--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ metastore_db/*
 spark-warehouse/*
 derby.log
 chekpoint/wikimedia_data_topic/*
+design/images/*
+design/realtime_streaming_wikimedia.drawio
